# SW_RACER_RE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTROLLER_CONFIG_ROADMAP.md  DAT_annoted.md  DAT_annoted.txt  FONT_RENDERING_ROADMAP.md  LICENSE  Makefile  NOTES.md  NOTES_IDirectInput.md  NOTES_ddraw.md  RANDOMIZER_ROADMAP.md  README.md  SWEP1RCR_dump.c  SWEP1RCR_dump_original.c  TODO.md  compile.bat  compile.py  data_symbols.syms  get_DAT.py  ia3dapi.h  structures.h  swr_patch.ips  typedefs.h  window.c
.github/workflows/: integrity_check.yml
archive/: CheatTable.CT  Helper-macros.c  Makefile  README.md  dinput.h  dinput_0x500.h  structures.h  swr_stdlib.h  typedefs.h  types.h  types_enums.h
archive/block_format_RE/: README.md  modelblock_code.pat  splineblock_code.pat  spriteblock.pat  textureblock.pat
assets/gltf/: replacement_names.md  replacement_names.txt
assets/shaders/: flipUpDown.frag  fullscreen.vert  fullscreen_ibl.vert  ibl_filtering.frag  n64_shader.frag  n64_shader.vert  pbrShader.frag  pbrShader.vert  progressBar.frag  renderList.frag  renderList.vert  skybox.vert
block_format_RE/: modelblock.pat  splineblock.pat
dinput_hook/: .clang-format  CMakeLists.txt  README.md  collision_viewer.cpp  collision_viewer.h  config.cpp  config.h  crash_logger.cpp  crash_logger.h  createReleaseArchive.py  custom_tracks.cpp  custom_tracks.h  debug_ui.cpp  debug_ui.h  dinput_hook.c  game_delta_hooks.cpp  game_delta_hooks.h  generate_embedded_shaders.py  generate_git_version.cmake  gltf_utils.cpp  gltf_utils.h  hook_helper.cpp  hook_helper.h  imgui_utils.cpp  imgui_utils.h  localization.cpp  localization.h  main.cpp  meshes.cpp  meshes.h  mod_version.h  n64_shader.cpp  n64_shader.h  node_utils.cpp  node_utils.h  patch.cpp  patch.h  randomizer.cpp  randomizer.h  randomizer_overlay.cpp  (+17 more)
dinput_hook/camera/: camera.cpp  camera.h
dinput_hook/game_deltas/: DirectX_delta.c  DirectX_delta.h  Window.c  Window_delta.c  Window_delta.h  capture_binding_delta.cpp  controls_unified_table_delta.cpp  gamepad_button_names_delta.cpp  main.cpp  main.h  main_delta.c  main_delta.h  randomizer_game_delta.cpp  randomizer_game_delta.h  rdMaterial.cpp  rdMaterial_delta.c  rdMaterial_delta.h  rdMatrix_delta.c  rdMatrix_delta.h  std3D_delta.c  std3D_delta.cpp  std3D_delta.h  stdConsole_delta.cpp  stdConsole_delta.h  stdControl_delta.c  stdControl_delta.h  stdDisplay_delta.c  stdDisplay_delta.h  swrControl_delta.cpp  swrControl_delta.h  swrDisplay_delta.c  swrDisplay_delta.h  swrGamepadNav_delta.cpp  swrGamepadNav_delta.h  swrMain_delta.cpp  swrMain_delta.h  swrModel_delta.cpp  swrModel_delta.h  swrMultiplayer_delta.cpp  swrMultiplayer_delta.h  (+27 more)
dinput_hook/glad/include/glad/: glad.h
dinput_hook/glad/src/: glad.c
dinput_hook/imgui-1.91.1/backends/: imgui_impl_d3d.cpp  imgui_impl_d3d.h
dinput_hook/imgui-master/backends/: imgui_impl_d3d.cpp  imgui_impl_d3d.h
dinput_hook/nv_dds/: nv_dds.cpp  nv_dds.h
dinput_hook/src/: dinput_hook.c  hook_helper.cpp  main.cpp  n64_shader.cpp  renderer_hook.cpp  renderer_hook.h  replacements.cpp  replacements.h
dinput_hook/src/hooks/: DirectX_hook.cpp  DirectX_hook.h  Window_hook.cpp  Window_hook.h  rdMaterial_hook.cpp  rdMaterial_hook.h  std3D_hook.cpp  std3D_hook.h  stdConsole_hook.cpp  stdConsole_hook.h  stdControl_hook.cpp  stdControl_hook.h  stdDisplay_hook.cpp  stdDisplay_hook.h  swrDisplay_hook.cpp  swrDisplay_hook.h  swrModel_hook.cpp  swrViewport_hook.cpp  swrViewport_hook.h
dinput_hook/src/utils/: gltf_utils.cpp  gltf_utils.h  imgui_utils.cpp  imgui_utils.h  meshes.cpp  meshes.h  node_utils.cpp  renderer_utils.cpp  renderer_utils.h  shaders_utils.cpp
dinput_hook/tinygltf/: gltf_utils.cpp  gltf_utils.h  stb_image_write.h
loader/: compile.bat  loader.cpp  md5.c  tester.c  window.c
miscellaneous/: get_DAT.py
mods/QualityOfLife/: Loader_config.txt  compile.bat  config.c  config.h  dllmain.c
mods/reimpl_mock/: compile.bat  dllmain.c
modules/swe1r-re-cfiles/: CD-Check.md  DD-Device-Enumeration.c  Entry-point.c  File-access.c  Force-Feedback-config.c  HUD-Engine-Status.c  Input-config-menu.c  Level-data-access.c  Occlusion-Queries.c  Rotation-Matrices.c  Second-largest-function.c  buffer.c  largest-function.c  texture.c  translate.c
patch_generation/: dll_loader.asm  dump.txt  generate.py  hello.asm
scripts/: GenerateGlobalHeaderFromSymbols.py  GenerateHooks.py  ParseFunctionsCSV.py  README.md  check_hook_annotations.py  generate_globals_from_symbols.py  parseCT.py  plots.ipynb  plots_math_functions.ipynb
scripts/Ghidra/: CalculateProgress.py  CheckHeaderDuplicates.py  CreateMissingFunctions.py  ExportFunctionList.py  ExportGlobalVariables.py  GenerateFunctionList.py  GenerateMasterHeader.py  ImportHeaderInfos.py  check_data_symbols_dups.py  importDataSymbols.py  rename_functions_from_header.py
scripts/ida/: import_all.py  show_changes.py  utils.py
scripts/localization/: diff_voice.py  extract_racer_tab.py  extract_switch_tabs.py
scripts/x32dbg/: x64dbg_sync.dp32
src/: A3D-Initialization.c  A3D-Update.c  Command-Line-Arguments.c  DD-Device-Enumeration.c  Debug-Mode.c  Decompressor.md  Entry-point.c  FUN.c  FUN.h  File-access.c  Force-Feedback-config.c  Force-Feedback.c  Game-object-functions.c  HUD-Engine-Status.c  HUD.c  Helper-macros.c  Helper-thread.c  Input-config-menu.c  Input-config.c  Level-data-access.c  Main-Menu.c  Main-loop.c  Menu-Widgets.c  Models-(MAlt).c  Models.c  More-Audio.c  Network-handling.c  Platform-Abstraction.c  Player-savedata.c  Random-Number-Generators.c  Registry-Keys.c  Renderer.c  Resolution-Check.c  Some-weird-functions.c  Splines.c  Sprites.c  Static-imports-(libc-etc.).c  Text-functions.c  Utility-functions.c  Video-config.c  (+42 more)
src/Dss/: sithMessage.c  sithMessage.h  sithMulti.c  sithMulti.h
src/Engine/: rdCamera.c  rdCamera.h  rdCanvas.c  rdCanvas.h  rdClip.c  rdClip.h  rdFont.c  rdFont.h  rdLight.c  rdLight.h  rdThing.c  (+9 more)
swr_reimpl/: addresses.h  dllMain.cpp  hook.c  hook.h  hook_addresses.h  macros.h  main.cpp  test.cpp  types.h  window.c
tests/: test_invariant_Helper-macros.c
(+139 files in other folders)
